executable python script

--- a/BackupOct24.ipynb
+++ b/BackupOct24.ipynb
@@ -313,6 +313,8 @@
     }
    ],
    "source": [
+    "# Step five – execute merge\n",
+    "\n",
     "# Merge functionality:\n",
     "   # Calculate merge point = furthest right point on host axis\n",
     "   # Shift guest data:\n",
@@ -391,15 +393,6 @@
     "   # obtain data and get merge points\n",
     "   mechs = get_mechs()\n",
     "   get_files(mechs)\n",
-    "\n",
-    "   '''\n",
-    "   files = os.listdir('./')\n",
-    "   files = [f for f in files if f.endswith('txt')]\n",
-    "   for i, mech in enumerate(mechs):\n",
-    "      mech.file = files[i]\n",
-    "      mech.data = pd.read_csv(f'./{mech.file}')\n",
-    "   '''\n",
-    "   \n",
     "   for i, mech in enumerate(mechs):\n",
     "      adjust_data(mech)\n",
     "      calculate_merge_reps(mech)\n",
