updated post prediction and importance notebooks

--- a/Post_Prediction/analysis.ipynb
+++ b/Post_Prediction/analysis.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result_noise_final_0.01.txt\n",
-      "result_noise_final_0.01.txt: completed\n",
-      "result_noise_final_0.05.txt\n",
-      "result_noise_final_0.05.txt: completed\n"
+      "scan_rate_3.txt\n",
+      "scan_rate_3.txt: completed\n",
+      "scan_rate_2.txt\n",
+      "scan_rate_2.txt: completed\n",
+      "scan_rate_1.txt\n",
+      "scan_rate_1.txt: completed\n",
+      "scan_rate_5.txt\n",
+      "scan_rate_5.txt: completed\n",
+      "scan_rate_4.txt\n",
+      "scan_rate_4.txt: completed\n",
+      "scan_rate_6.txt\n",
+      "scan_rate_6.txt: completed\n"
      ]
     }
    ],
@@ -217,17 +225,18 @@
     "    df.drop('key', axis=1, inplace=True)\n",
     "    return df\n",
     "\n",
-    "root = '230510_general_results'\n",
+    "root = '230515_sr_results'\n",
     "\n",
     "for path_obj in os.scandir(f'./{root}/data'):\n",
     "    file_path = path_obj.path\n",
     "    file_name = path_obj.name\n",
     "    print(file_name)\n",
     "    details = file_name.split('_')\n",
-    "    sr = 6\n",
-    "    # train_noise = 0.01\n",
-    "    # test_noise = 0.01\n",
-    "    train_noise = details[-1][:-4]\n",
+    "    # sr = 6\n",
+    "    sr = details[-1][:-4]\n",
+    "    train_noise = 0.01\n",
+    "    test_noise = 0.01\n",
+    "    # train_noise = details[-1][:-4]\n",
     "    test_noise = train_noise\n",
     "    full_data = pd.read_csv(file_path)\n",
     "    full_data = add_info(full_data, path_obj)\n",
@@ -309,148 +318,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Figure size 576x360 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 576x360 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 576x360 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 576x360 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x720 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x720 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x720 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x720 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 504x252 with 0 Axes>"
+       "<Figure size 432x288 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -599,7 +473,7 @@
     "         title = f'{base}/figures/{type}'\n",
     "         noise_box_plots(type, train_noise, title)\n",
     "\n",
-    "def dr_sr(base):\n",
+    "def do_sr(base):\n",
     "   od_vals = []\n",
     "   od_columns = []\n",
     "   cls_vals = []\n",
@@ -650,15 +524,15 @@
     "   \n",
     "   if 'general' in obj.name:\n",
     "      pass\n",
-    "      do_general(base)\n",
+    "      # do_general(base)\n",
     "\n",
     "   if 'noise' in obj.name:\n",
     "      pass\n",
     "      # do_noise(base)\n",
     "      \n",
     "   if 'sr' in obj.name:\n",
-    "      pass\n",
-    "      #do_sr(base)"
+    "      do_sr(base)\n",
+    "      # pass"
    ]
   },
   {
